# PyChmiRad

./: .gitignore  README.md  mainwindow.py  pyproject.toml  requirements.txt
examples/: download.py
src/: __init__.py  chmirad.py
src/chmirad.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pychmirad/: chmirad.py
src/qtchmirad/: main.py  mainwindow.py  mainwindow.ui  mainwindow_ui.py
