[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chmirad"
version = "0.1.0"
description = "A tool for downloading and visualizing radar data from CHMI"
authors = [
    { name = "Roman Dvořák", email = "dvorakroman@ust.cz" }
]
readme = "README.md"
requires-python = ">=3.6"
keywords = ["radar", "visualization", "CHMI"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests",
    "h5py",
    "matplotlib",
    "numpy",
    "cartopy",
    "PyQt5"
]

[project.urls]
"Homepage" = "https://your.project.homepage"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
qtchmirad = "pychmirad.chmirad_gui:main"